--- a/OpenGL/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL/OpenGL.vcxproj.filters
@@ -36,4 +36,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="texture1.png">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
