--- a/OpenGL/OpenGL/packages.config
+++ b/OpenGL/OpenGL/packages.config
@@ -4,4 +4,5 @@
   <package id="freeglut.redist" version="2.8.1.15" targetFramework="native" />
   <package id="glew" version="1.9.0.1" targetFramework="native" />
   <package id="glew.redist" version="1.9.0.1" targetFramework="native" />
+  <package id="OpenCV" version="2.4.10" targetFramework="native" />
 </packages>
